--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <img src="img/1_header.png" style="width:500px">
+  <img src="https://github.com/EastBayEv/GitHubPages/blob/main/img/1_header.png" style="width:500px">
   <body style="background-color: #fafaf7; font-family:'Courier New'">
     <h1 style="font-size: 4rem; color: #070807">Woof! Welcome to DoubleDog, Inc.</h1>
     <p>This is where you can learn more about us and our leadership team, Woofy and Barky!</p>
